--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.84.0",
+    "@vercel/speed-insights": "^1.3.1",
     "next": "16.0.7",
     "next-intl": "^4.5.5",
     "react": "19.2.1",
