--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
+    "google-auth-library": "^10.5.0",
+    "google-spreadsheet": "^5.0.2",
     "next": "16.0.7",
     "next-intl": "^4.5.5",
     "react": "19.2.1",
