chore: mobile UI fixes, blog typography updates, and general cleanup

--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
+    "e2e": "playwright test",
+    "test:all": "npm run test && npm run e2e",
     "generate:blog": "npx ts-node scripts/generate-blog-post.ts"
   },
   "dependencies": {
@@ -28,9 +33,15 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@playwright/test": "^1.51.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "jsdom": "^22.0.0",
+    "vitest": "^1.1.4",
     "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
