--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:coverage": "vitest --coverage",
     "e2e": "playwright test",
     "test:all": "npm run test && npm run e2e",
-    "generate:blog": "npx ts-node scripts/generate-blog-post.ts"
+    "generate:blog": "npx ts-node scripts/generate-blog-post.ts",
+    "enrich:seo": "npx tsx scripts/enrich-recipe-seo.ts"
   },
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
