--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "google-auth-library": "^10.5.0",
     "google-spreadsheet": "^5.0.2",
+    "lucide-react": "^0.562.0",
     "next": "16.0.7",
     "next-intl": "^4.5.5",
     "react": "19.2.1",
