--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/yargs": "^17.0.35",
     "@vitejs/plugin-react": "^5.0.0",
     "baseline-browser-mapping": "^2.8.32",
+    "chalk": "^5.6.2",
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
@@ -55,6 +57,7 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5",
-    "vitest": "^1.1.4"
+    "vitest": "^1.1.4",
+    "yargs": "^18.0.0"
   }
 }
