--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
     "e2e": "playwright test",
     "test:all": "npm run test && npm run e2e",
     "generate:blog": "npx ts-node scripts/generate-blog-post.ts",
-    "enrich:seo": "npx tsx scripts/enrich-recipe-seo.ts"
+    "enrich:seo": "npx tsx scripts/enrich-recipe-seo.ts",
+    "build:cloudflare": "npx @opennextjs/cloudflare build",
+    "preview:cloudflare": "npx wrangler pages dev .open-next/assets --compatibility-flags=nodejs_compat"
   },
   "dependencies": {
+    "@opennextjs/cloudflare": "^1.0.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.84.0",
     "@tailwindcss/typography": "^0.5.19",
-    "@vercel/analytics": "^1.6.1",
-    "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
     "google-auth-library": "^10.5.0",
     "google-spreadsheet": "^5.0.2",
     "google-translate-api-x": "^10.7.2",
     "lucide-react": "^0.562.0",
-    "next": "16.0.7",
+    "next": "16.0.10",
     "next-intl": "^4.5.5",
     "react": "19.2.1",
     "react-dom": "19.2.1",
@@ -49,7 +50,7 @@
     "chalk": "^5.6.2",
     "dotenv": "^17.2.3",
     "eslint": "^9",
-    "eslint-config-next": "16.0.7",
+    "eslint-config-next": "16.0.10",
     "jsdom": "^22.0.0",
     "openai": "^6.14.0",
     "sharp": "^0.34.5",
@@ -58,6 +59,7 @@
     "tsx": "^4.21.0",
     "typescript": "^5",
     "vitest": "^1.1.4",
+    "wrangler": "^4.53.0",
     "yargs": "^18.0.0"
   }
 }
