fix: remove account_id from wrangler config for Pages compatibility

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,6 +4,5 @@
     "compatibility_flags": [
         "nodejs_compat"
     ],
-    "pages_build_output_dir": ".open-next/assets",
-    "account_id": "524f538eb0ee76515ec20ba665259e21"
+    "pages_build_output_dir": ".open-next/assets"
 }
