--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:all": "npm run test && npm run e2e",
     "generate:blog": "npx ts-node scripts/generate-blog-post.ts",
     "enrich:seo": "npx tsx scripts/enrich-recipe-seo.ts",
+    "prebuild:cloudflare": "node scripts/check-build-env.js",
     "build:cloudflare": "npx @opennextjs/cloudflare build",
     "preview:cloudflare": "npx wrangler pages dev .open-next/assets --compatibility-flags=nodejs_compat"
   },
