fix: deploy .open-next for SSR Worker on Cloudflare Pages

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -57,4 +57,4 @@ jobs:
         with:
           apiToken: ${{ secrets.CF_PAGES_API_TOKEN }}
           projectName: ${{ secrets.CF_PAGES_PROJECT_NAME }}
-          directory: ./.open-next/assets
+          directory: ./.open-next
