fix: switch to Cloudflare Workers deployment with OpenNext
- Update wrangler.jsonc with proper main entry point and assets binding
- Update workflow to use 'wrangler deploy' instead of Pages action
- Remove obsolete wrangler.toml
- OpenNext requires Workers deployment for SSR to work

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: Deploy to Cloudflare Pages
+name: Deploy to Cloudflare Workers
 
 on:
   push:
@@ -22,39 +22,23 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Render wrangler.toml from secrets
-        env:
-          CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
-          CF_KV_ID: ${{ secrets.CF_KV_ID }}
-          CF_R2_BUCKET: ${{ secrets.CF_R2_BUCKET }}
-          CF_D1_ID: ${{ secrets.CF_D1_ID }}
-        run: |
-          cat > wrangler.toml <<'EOF'
-          name = "mealfinder"
-          account_id = "${CF_ACCOUNT_ID}"
-          compatibility_date = "2024-12-01"
-          pages_build_output_dir = ".open-next/assets"
-
-          [[kv_namespaces]]
-          binding = "MY_KV"
-          id = "${CF_KV_ID}"
-
-          [[r2_buckets]]
-          binding = "MY_R2"
-          bucket_name = "${CF_R2_BUCKET}"
-
-          [[d1_databases]]
-          binding = "MY_DB"
-          database_name = "my-database"
-          database_id = "${CF_D1_ID}"
-          EOF
-
       - name: Build for Cloudflare
+        env:
+          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+          NEXT_PUBLIC_SITE_URL: ${{ secrets.NEXT_PUBLIC_SITE_URL }}
         run: npm run build:cloudflare
 
-      - name: Publish to Cloudflare Pages
-        uses: cloudflare/pages-action@v1
-        with:
-          apiToken: ${{ secrets.CF_PAGES_API_TOKEN }}
-          projectName: ${{ secrets.CF_PAGES_PROJECT_NAME }}
-          directory: ./.open-next
+      - name: Debug build output
+        run: |
+          echo "=== .open-next directory contents ==="
+          ls -la .open-next/ || echo ".open-next not found"
+          echo "=== Checking for worker.js ==="
+          ls -la .open-next/worker.js || echo "worker.js not found"
+
+      - name: Deploy to Cloudflare Workers
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CF_PAGES_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
+        run: npx wrangler deploy
