--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,8 +1,18 @@
 {
-    "name": "mealfinder",
-    "compatibility_date": "2024-12-01",
-    "compatibility_flags": [
-        "nodejs_compat"
-    ],
-    "pages_build_output_dir": ".open-next/assets"
+  "$schema": "node_modules/wrangler/config-schema.json",
+  "name": "mealfinder",
+  "main": ".open-next/worker.js",
+  "compatibility_date": "2024-12-01",
+  "compatibility_flags": ["nodejs_compat"],
+
+  // Static assets binding (required for OpenNext)
+  "assets": {
+    "binding": "ASSETS",
+    "directory": ".open-next/assets",
+  },
+
+  // Observability for monitoring and logs
+  "observability": {
+    "enabled": true,
+  },
 }
