--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: Deploy to Cloudflare Workers
+name: Deploy to Cloudflare Pages
 
 on:
   push:
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      deployments: write
 
     steps:
       - name: Checkout
@@ -36,9 +37,11 @@ jobs:
           ls -la .open-next/ || echo ".open-next not found"
           echo "=== Checking for worker.js ==="
           ls -la .open-next/worker.js || echo "worker.js not found"
+          echo "=== Assets directory ==="
+          ls -la .open-next/assets/ || echo "assets not found"
 
-      - name: Deploy to Cloudflare Workers
+      - name: Deploy to Cloudflare Pages
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CF_PAGES_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
-        run: npx wrangler deploy
+        run: npx wrangler pages deploy .open-next --project-name=${{ secrets.CF_PAGES_PROJECT_NAME }}
