--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,18 +1,7 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "mealfinder",
-  "main": ".open-next/worker.js",
   "compatibility_date": "2024-12-01",
   "compatibility_flags": ["nodejs_compat"],
-
-  // Static assets binding (required for OpenNext)
-  "assets": {
-    "binding": "ASSETS",
-    "directory": ".open-next/assets",
-  },
-
-  // Observability for monitoring and logs
-  "observability": {
-    "enabled": true,
-  },
+  "pages_build_output_dir": ".open-next",
 }
