fix: remove trailing comma in wrangler.jsonc causing parse error

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,5 +3,5 @@
   "name": "mealfinder",
   "compatibility_date": "2024-12-01",
   "compatibility_flags": ["nodejs_compat"],
-  "pages_build_output_dir": ".open-next",
+  "pages_build_output_dir": ".open-next"
 }
