--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "generate:blog": "npx ts-node scripts/generate-blog-post.ts",
     "enrich:seo": "npx tsx scripts/enrich-recipe-seo.ts",
     "prebuild:cloudflare": "node scripts/check-build-env.js",
-    "build:cloudflare": "npx @opennextjs/cloudflare build && cp .open-next/worker.js .open-next/_worker.js",
+    "build:cloudflare": "CLOUDFLARE_BUILD=true npx @opennextjs/cloudflare build && cp .open-next/worker.js .open-next/_worker.js",
     "preview:cloudflare": "npx wrangler pages dev .open-next --compatibility-flags=nodejs_compat"
   },
   "dependencies": {
