refactor: convert to static export (SSG) for Cloudflare Pages
- Add output: 'export' for Cloudflare builds
- Remove OpenNext dependency for builds (still available for dev)
- Convert API routes to client-side functions
- Convert auth callback from route to page component
- Generate RSS feed at build time instead of dynamically
- Update wrangler.jsonc to use 'out' directory
- Add _redirects file for Cloudflare Pages

This eliminates the 3 MiB worker size limit since no worker is needed for static sites.

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "test:all": "npm run test && npm run e2e",
     "generate:blog": "npx ts-node scripts/generate-blog-post.ts",
     "enrich:seo": "npx tsx scripts/enrich-recipe-seo.ts",
-    "prebuild:cloudflare": "node scripts/check-build-env.js",
-    "build:cloudflare": "CLOUDFLARE_BUILD=true npx @opennextjs/cloudflare build && cp .open-next/worker.js .open-next/_worker.js",
-    "preview:cloudflare": "npx wrangler pages dev .open-next --compatibility-flags=nodejs_compat"
+    "prebuild:cloudflare": "node scripts/check-build-env.js && node scripts/generate-rss.js",
+    "build:cloudflare": "CLOUDFLARE_BUILD=true next build",
+    "preview:cloudflare": "npx wrangler pages dev out"
   },
   "dependencies": {
     "@opennextjs/cloudflare": "^1.0.0",
